[package]
name = "amethyst-pong"
version = "0.1.0"
authors = ["Andreas Andersson <andreas@herrandersson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"
rev = "ae64a3ba38a927c3ac949099a5323e5b4c4661da"
features = ["metal"]
