[package]
name = "amethyst-pong"
version = "0.1.0"
authors = ["Andreas Andersson <andreas@herrandersson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"
rev = "6453a83c4dc5b6152d35004d64931f5e09f98e65"
features = ["vulkan"]

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
